feat: GitHub訪問数システムを複数リポジトリ対応に大幅改善
## 追加された機能
- 複数のGitHubリポジトリ管理機能
- リポジトリ固有のトークン設定対応
- コマンドライン実行オプション（特定リポジトリ、テストモード）
- リポジトリごとの統計情報表示

## 変更内容
### コマンド機能の強化
- `--repository`オプションで特定リポジトリの処理が可能
- `--test`オプションでテスト実行に対応
- 複数リポジトリの一括処理機能を実装
- 詳細な実行結果とエラー統計の表示

### データモデルの改善
- `GitHubView`モデルに`repository_id`フィールドを追加
- `GitHubRepository`モデルとのリレーション機能を実装
- 新しいスコープメソッド（`forRepository`, `withRepository`）を追加
- 後方互換性を維持したプロジェクト名フィルタリング

### Web UIの機能拡張
- リポジトリベースのフィルタリング機能
- 既存のプロジェクト名フィルタリングとの併用対応
- チャート表示でのリポジトリ別データ表示

### システム運用の改善
- スケジュール実行を`routes/console.php`に移動
- 重複実行防止（`withoutOverlapping`）機能を追加
- バックグラウンド実行とログ出力の設定
- GitHub API設定を`config/services.php`に統合

### ルーティングの整理
- GitHub関連機能を専用ルートグループに統合
- 統計情報とプロジェクト統計の新しいエンドポイント追加

## 技術仕様
- Laravel Eloquentリレーションシップの活用
- エラーハンドリングとログ機能の強化
- レスポンシブなデータ取得とキャッシュ最適化

--- a/.devcontainer/php/Dockerfile
+++ b/.devcontainer/php/Dockerfile
@@ -61,5 +61,6 @@ RUN useradd -m -s /bin/bash h-nishihara && \
     # h-nishiharaユーザーをwww-dataグループに追加
     usermod -a -G www-data h-nishihara
     
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 # supervisordを起動
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
