refactor: URL生成をLaravel標準に統一し管理機能を分離・改善
## 変更内容
### URL管理の標準化
- カスタム`UrlHelper`クラスを削除
- 全てのURL生成をLaravelの`route()`ヘルパーに統一
- コードの保守性と可読性を向上

### 管理機能の改善と分離
- 管理ダッシュボードに統計情報表示機能を追加
- リポジトリの新規作成機能を専用ページに分離
- Livewireコンポーネントを編集専用に特化

### 開発環境の最適化
- Docker Composeでnginxのポートを80:80に変更
- Nodeサービスを有効化してフロントエンド開発環境を改善

## 技術的改善
### アーキテクチャの簡素化
- カスタムヘルパークラスの削除によりコード依存関係を簡素化
- Laravel標準機能の活用でフレームワークとの一貫性を向上

### ユーザビリティの向上
- 管理ダッシュボードでリアルタイム統計情報を表示
- リポジトリ管理の操作フローを明確化（作成・編集・削除の分離）

### コード品質の改善
- 重複機能の削除とメソッド名の明確化
- より直感的な画面遷移とナビゲーション構造

## 新機能
- 統計情報表示（総リポジトリ数、アクティブ数、総ビュー数など）
- リポジトリ作成専用ページの追加
- 最近のアクティビティ表示機能

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       dockerfile: ./Dockerfile
     image: nginx-proxy-github-traffic-api:1.0
     ports:
-      - 8090:80
+      - 80:80
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
 
@@ -59,21 +59,21 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
 
-  # node:
-  #   container_name: GitHub-Traffic-API-node
-  #   build:
-  #     context: ./node
-  #     dockerfile: ./Dockerfile
-  #   image: github-traffic-api-node:1.0
-  #   working_dir: "/workspace/src"
-  #   command: /bin/bash -c 'npm i && npm rebuild node-sass && npm run dev'
-  #   ports:
-  #     - 5173:5173
-  #   volumes:
-  #     - ../:/workspace:cached
-  #   environment:
-  #     - TZ=Asia/Tokyo
-  #     - HOST=0.0.0.0
+  node:
+    container_name: github-traffic-api-node
+    build:
+      context: ./node
+      dockerfile: ./Dockerfile
+    image: github-traffic-api-node:1.0
+    working_dir: "/workspace/src"
+    command: /bin/bash -c 'npm i && npm rebuild node-sass && npm run dev'
+    ports:
+      - 5173:5173
+    volumes:
+      - ../:/workspace:cached
+    environment:
+      - TZ=Asia/Tokyo
+      - HOST=0.0.0.0
 
   phpmyadmin:
     container_name: github-traffic-api-phpmyadmin
