refactor: 独自nginx-proxyから外部Nginx Proxy Managerに移行
## 変更内容
### プロキシ管理の外部化
- 独自の`nginx-proxy`サービスを削除
- 外部の`nginx-proxy-manager-network`ネットワークに接続
- より統合的なリバースプロキシ管理システムに移行

### ネットワーク構成の改善
- すべてのサービスを共有外部ネットワークに接続
- サービス間通信の最適化
- スケーラビリティと管理性の向上

### 設定の簡素化
- `VIRTUAL_HOST`環境変数の設定を削除
- プロキシ設定をNginx Proxy Managerに集約
- Docker Composeファイルの構成を簡潔化

## 対象サービス
- `app`: バックエンドアプリケーション
- `web`: Webサーバー（内部ポート80を公開）
- `db`: MySQLデータベース
- `node`: Node.js開発環境
- `phpmyadmin`: データベース管理ツール

## 運用上の利点
- 複数プロジェクト間でのプロキシ設定統一
- SSL証明書管理の中央化
- 管理画面による直感的なプロキシ設定
- ポート競合の回避

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,17 +4,12 @@ volumes:
   php-fpm-socket:
     name: github-traffic-api_php-fpm-socket
 
+# 共有ネットワークに接続
+networks:
+  nginx-proxy-manager-network:
+    external: true
+
 services:
-  nginx-proxy:
-    container_name: github-traffic-api-nginx-proxy
-    build:
-      context: ./proxy
-      dockerfile: ./Dockerfile
-    image: nginx-proxy-github-traffic-api:1.0
-    ports:
-      - 80:80
-    volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
 
   app:
     container_name: github-traffic-api-backend
@@ -25,6 +20,8 @@ services:
     volumes:
       - php-fpm-socket:/var/run/php-fpm
       - ../:/workspace:cached
+    networks:
+      - nginx-proxy-manager-network
 
   web:
     build:
@@ -35,11 +32,13 @@ services:
     volumes:
       - php-fpm-socket:/var/run/php-fpm
       - ../:/workspace:cached
-    env_file: .env
-    environment:
-      - VIRTUAL_HOST=${VIRTUAL_HOST}
+    # 内部ポートを公開（デバッグ用、本番では削除推奨）
+    expose:
+      - "80"
     depends_on:
       - app
+    networks:
+      - nginx-proxy-manager-network
 
   db:
     container_name: github-traffic-api-db
@@ -58,6 +57,8 @@ services:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+    networks:
+      - nginx-proxy-manager-network
 
   node:
     container_name: github-traffic-api-node
@@ -74,6 +75,8 @@ services:
     environment:
       - TZ=Asia/Tokyo
       - HOST=0.0.0.0
+    networks:
+      - nginx-proxy-manager-network
 
   phpmyadmin:
     container_name: github-traffic-api-phpmyadmin
@@ -91,4 +94,5 @@ services:
       PMA_HOSTS: ${PMA_HOSTS}
       PMA_USER: ${PMA_USER}
       PMA_PASSWORD: ${PMA_PASSWORD}
-      VIRTUAL_HOST: ${VIRTUAL_HOST_PHPMYADMIN}
+    networks:
+      - nginx-proxy-manager-network
