feat: モダンUI刷新と手動データ取得機能を追加
## UI/UXの大幅改善
### デザインシステムの刷新
- モダンなグラデーション背景とガラスモーフィズムデザイン
- カード型レイアウトとマイクロインタラクション
- レスポンシブデザイン対応（モバイルファーストアプローチ）
- 統一されたカラーパレットとタイポグラフィ

### インタラクション強化
- ホバーエフェクトとトランジションアニメーション
- 立体感のあるシャドウとボタンデザイン
- 直感的なナビゲーションヘッダー
- アクセシビリティを考慮した配色とコントラスト

## 新機能追加
### 手動データ取得機能
- 個別リポジトリの訪問数データ手動取得
- 全アクティブリポジトリの一括データ取得
- リアルタイムローディング状態表示
- 実行結果のフィードバック機能

### 管理機能強化
- Artisanコマンドの統合実行
- 詳細なログ記録とエラーハンドリング
- 状態管理とユーザーフィードバック
- アクティブリポジトリの自動判定

## システム改善
### 開発環境最適化
- Docker Composeプロジェクト名の明示化
- Node.jsポート競合回避（5174:5173）
- npm依存関係インストールの簡略化

### ルーティング簡素化
- トップページを直接GitHub viewsに統合
- 不要なルートグループの削除
- シンプルなURL構造への変更

### 細かな修正
- 管理画面レイアウトのCSSクラス名修正
- コメント整理とコードクリーンアップ

## 技術仕様
- Livewire統合によるリアルタイム状態管理
- CSS Grid/Flexboxによるモダンレイアウト
- プログレッシブエンハンスメント対応
- パフォーマンス最適化されたアニメーション

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,3 +1,6 @@
+# コンテナ名
+name: github-traffic-api
+
 volumes:
   db-store:
     name: github-traffic-api_db
@@ -32,7 +35,6 @@ services:
     volumes:
       - php-fpm-socket:/var/run/php-fpm
       - ../:/workspace:cached
-    # 内部ポートを公開（デバッグ用、本番では削除推奨）
     expose:
       - "80"
     depends_on:
@@ -67,9 +69,9 @@ services:
       dockerfile: ./Dockerfile
     image: github-traffic-api-node:1.0
     working_dir: "/workspace/src"
-    command: /bin/bash -c 'npm i && npm rebuild node-sass && npm run dev'
+    command: /bin/sh -c 'npm install && npm run dev'
     ports:
-      - 5173:5173
+      - 5174:5173
     volumes:
       - ../:/workspace:cached
     environment:
