--- a/.devcontainer/nginx/default.conf
+++ b/.devcontainer/nginx/default.conf
@@ -60,16 +60,16 @@ server {
     }
     
     # Viteの開発サーバーへのリクエストを転送
-    # location /@vite/ {
-    #     proxy_pass http://node:5173/;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection "upgrade";
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    # }
+    location /@vite/ {
+        proxy_pass http://node:5174/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
     # PHPファイルの処理
     location ~ \.php$ {
