feat: 本番環境用Docker構成をdeploy/ディレクトリに分離
- 開発環境(.devcontainer)と本番環境(deploy/)を完全分離
- ビルドコンテキストをリポジトリルートに統一してパス問題を解決
- 本番用Dockerfileをdeploy/docker/に配置
- 本番用Compose設定をdeploy/prod/に配置
- 環境変数テンプレートとデプロイガイドを追加
- phpMyAdminインポート用の一時設定を分離
- 502エラー解決のためPHP-FPM Unixソケット設定を追加

Changes:
- Add deploy/docker/php/Dockerfile (本番用PHPイメージ)
- Add deploy/docker/nginx/Dockerfile (本番用Nginxイメージ)
- Add deploy/docker/mysql/Dockerfile (本番用MySQLイメージ)
- Add deploy/prod/docker-compose.yml (本番用Compose設定)
- Add deploy/prod/docker-compose.import.yml (DBインポート用)
- Add deploy/prod/env.template (環境変数テンプレート)
- Add deploy/prod/README.md (デプロイガイド)
- Fix PHP-FPM configuration for Unix socket communication
- Remove development-specific settings from production builds

--- a/deploy/docker/php/Dockerfile
+++ b/deploy/docker/php/Dockerfile
@@ -1,3 +1,4 @@
+# アセットビルド用ステージ
 FROM node:20-alpine AS assets
 WORKDIR /app
 # 依存関係のみ先にコピー（キャッシュ最適化）
@@ -6,6 +7,7 @@ RUN cd ./src && npm ci
 COPY src ./src
 RUN cd ./src && npm run build
 
+# PHP基本ステージ
 FROM php:8.2-fpm AS base
 ENV TZ=Asia/Tokyo LANG=ja_JP.UTF-8 LC_ALL=ja_JP.UTF-8
 RUN apt-get update \
@@ -14,22 +16,30 @@ RUN apt-get update \
   && locale-gen ja_JP.UTF-8 && localedef -f UTF-8 -i ja_JP ja_JP.UTF-8 \
   && docker-php-ext-install intl pdo_mysql mbstring zip bcmath
 
+# 本番用ステージ
 FROM base AS prod
 ENV APP_ENV=production APP_DEBUG=0
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 WORKDIR /var/www/html
+
+# アプリケーションコードをコピー
 COPY src /var/www/html
+# ビルド済みアセットをコピー
 COPY --from=assets /app/src/public/build /var/www/html/public/build
+
+# Composer本番インストール
+RUN composer install --no-dev --optimize-autoloader --no-interaction
+
 # PHP-FPM設定ファイルをコピー（Unixソケット用）
-COPY php/php-fpm.d/zzz-www.conf /usr/local/etc/php-fpm.d/zzz-www.conf
-RUN composer install --no-dev --optimize-autoloader --no-interaction \
-  && php -v >/dev/null 2>&1 || true
-# Laravel を想定したキャッシュ（存在しない場合はスキップ）
+COPY deploy/docker/php/php-fpm.conf /usr/local/etc/php-fpm.d/zzz-www.conf
+
+# Laravel用キャッシュ（存在しない場合はスキップ）
 RUN php artisan config:cache || true \
   && php artisan route:cache || true \
   && php artisan view:cache || true
+
+# 権限設定
 RUN chown -R www-data:www-data /var/www/html
 USER www-data
+
 CMD ["php-fpm"]
-
-
