--- a/deploy/prod/docker-compose.yml
+++ b/deploy/prod/docker-compose.yml
@@ -1,8 +1,11 @@
+version: '3.8'
+
 services:
   app:
+    container_name: github-traffic-api-backend
     build:
-      context: .
-      dockerfile: ./php/Dockerfile.prod
+      context: ../..
+      dockerfile: deploy/docker/php/Dockerfile
     image: github-traffic-api-backend:prod
     environment:
       APP_ENV: production
@@ -17,11 +20,14 @@ services:
       interval: 30s
       timeout: 5s
       retries: 3
+    networks:
+      - nginx-proxy-manager-network
 
   web:
+    container_name: github-traffic-api-web
     build:
-      context: .
-      dockerfile: ./nginx/Dockerfile.prod
+      context: ../..
+      dockerfile: deploy/docker/nginx/Dockerfile
     image: github-traffic-api-web:prod
     depends_on:
       - app
@@ -35,24 +41,40 @@ services:
       interval: 30s
       timeout: 5s
       retries: 3
+    networks:
+      - nginx-proxy-manager-network
 
   db:
+    container_name: github-traffic-api-db
+    build:
+      context: ../..
+      dockerfile: deploy/docker/mysql/Dockerfile
+    image: github-traffic-api-db:prod
+    volumes:
+      - db-store:/var/lib/mysql
+    env_file: .env
+    environment:
+      TZ: ${TIME_ZONE}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "mysqladmin ping -h localhost -u$${MYSQL_USER} -p$${MYSQL_PASSWORD} --silent"]
       interval: 30s
       timeout: 5s
       retries: 5
-
-  node:
-    deploy:
-      replicas: 0
-
-  phpmyadmin:
-    deploy:
-      replicas: 0
+    networks:
+      - nginx-proxy-manager-network
 
 volumes:
+  db-store:
+    name: github-traffic-api_db
+  php-fpm-socket:
+    name: github-traffic-api_php-fpm-socket
   app-storage:
 
-
+networks:
+  nginx-proxy-manager-network:
+    external: true
