--- a/deploy/prod/env.template
+++ b/deploy/prod/env.template
@@ -25,3 +25,9 @@ DB_PORT=3306
 DB_DATABASE=github_traffic_api
 DB_USERNAME=github_traffic_user
 DB_PASSWORD=your_secure_password_here
+
+# phpMyAdmin設定
+PMA_ARBITRARY=1
+PMA_HOSTS=db
+PMA_USER=github_traffic_user
+PMA_PASSWORD=your_secure_password_here
