--- a/deploy/prod/env.template
+++ b/deploy/prod/env.template
@@ -1,6 +1,10 @@
 # 本番環境用環境変数テンプレート
 # コピーして .env として使用してください
 
+# GitHub Container Registry設定
+REGISTRY_URL=ghcr.io/YOUR_GITHUB_USERNAME/github-traffic-api-laravel
+IMAGE_TAG=latest
+
 # タイムゾーン
 TIME_ZONE=Asia/Tokyo
 
@@ -10,12 +14,14 @@ MYSQL_USER=github_traffic_user
 MYSQL_PASSWORD=your_secure_password_here
 MYSQL_ROOT_PASSWORD=your_secure_root_password_here
 
+# Redis設定
+REDIS_PASSWORD=your_redis_password_here
+
 # アプリケーション設定
+APP_NAME="GitHub Traffic API"
 APP_ENV=production
 APP_DEBUG=false
 APP_URL=https://your-domain.com
-
-# セキュリティキー（Laravel用）
 APP_KEY=your_app_key_here
 
 # データベース接続設定
@@ -25,6 +31,22 @@ DB_PORT=3306
 DB_DATABASE=github_traffic_api
 DB_USERNAME=github_traffic_user
 DB_PASSWORD=your_secure_password_here
+
+# Redis接続設定
+REDIS_CLIENT=phpredis
+REDIS_HOST=redis
+REDIS_PASSWORD=your_redis_password_here
+REDIS_PORT=6379
+
+# セッション・キャッシュ・キュー設定
+SESSION_DRIVER=redis
+CACHE_STORE=redis
+QUEUE_CONNECTION=redis
+
+# GitHub API設定
+GITHUB_TOKEN=your_github_personal_access_token
+GITHUB_OWNER=your_github_username
+GITHUB_REPO=your_repo_name
 
 # phpMyAdmin設定
 PMA_ARBITRARY=1
