--- a/deploy/prod/docker-compose.local.yml
+++ b/deploy/prod/docker-compose.local.yml
@@ -105,38 +105,43 @@ services:
       - nginx-proxy-manager-network
 
   # 検証段階ではコメントアウト（appコンテナが正常に動作してから有効化）
-  # scheduler:
-  #   container_name: github-traffic-api-scheduler
-  #   image: github-traffic-api-backend:local
-  #   command: php artisan schedule:work
-  #   environment:
-  #     APP_ENV: production
-  #     APP_DEBUG: "false"
-  #     TZ: Asia/Tokyo
-  #   env_file:
-  #     - .env
-  #   volumes:
-  #     - app-storage:/var/www/html/storage
-  #   restart: unless-stopped
-  #   depends_on:
-  #     - app
-  #   networks:
-  #     - nginx-proxy-manager-network
+  scheduler:
+    container_name: github-traffic-api-scheduler
+    image: github-traffic-api-backend:local
+    command: php artisan schedule:work
+    environment:
+      APP_ENV: production
+      APP_DEBUG: "false"
+      TZ: Asia/Tokyo
+    env_file:
+      - .env
+    volumes:
+      - app-storage:/var/www/html/storage
+    restart: unless-stopped
+    depends_on:
+      - app
+    networks:
+      - nginx-proxy-manager-network
 
-  # worker:
-  #   container_name: github-traffic-api-worker
-  #   image: github-traffic-api-backend:local
-  #   command: php artisan queue:work redis --sleep=3 --tries=3 --max-time=3600
-  #   environment:
-  #     APP_ENV: production
-  #     APP_DEBUG: "false"
-  #     TZ: Asia/Tokyo
-  #   env_file:
-  #     - .env
-  #   volumes:
-  #     - app-storage:/var/www/html/storage
-  #   restart: unless-stopped
-  #   depends_on:
-  #     - app
-  #   networks:
-  #     - nginx-proxy-manager-network
+  # phpMyAdmin（データベース管理用）
+  # セキュリティのため、必要な時だけ起動することを推奨
+  phpmyadmin:
+    image: phpmyadmin:latest
+    container_name: github-traffic-api-phpmyadmin
+    ports:
+      - "8091:80"
+    environment:
+      PMA_ARBITRARY: 1
+      PMA_HOST: db
+      PMA_PORT: 3306
+      PMA_USER: ${MYSQL_USER}
+      PMA_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: "no"  # 自動起動しない（手動で起動する）
+    profiles:
+      - tools  # プロファイルで制御（デフォルトでは起動しない）
+    networks:
+      - nginx-proxy-manager-network
