--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -9,7 +9,6 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push:
@@ -36,6 +35,8 @@ jobs:
       - name: Extract metadata
         id: meta
         run: |
+          # リポジトリ名を小文字に変換（GHCRの要件）
+          echo "image_name=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
           echo "timestamp=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_OUTPUT
           echo "sha_short=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
 
@@ -46,9 +47,9 @@ jobs:
           file: ./deploy/docker/php/Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/app:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/app:${{ steps.meta.outputs.timestamp }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/app:${{ steps.meta.outputs.sha_short }}
+            ${{ env.REGISTRY }}/${{ steps.meta.outputs.image_name }}/app:latest
+            ${{ env.REGISTRY }}/${{ steps.meta.outputs.image_name }}/app:${{ steps.meta.outputs.timestamp }}
+            ${{ env.REGISTRY }}/${{ steps.meta.outputs.image_name }}/app:${{ steps.meta.outputs.sha_short }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           target: prod
@@ -60,9 +61,9 @@ jobs:
           file: ./deploy/docker/nginx/Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/web:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/web:${{ steps.meta.outputs.timestamp }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/web:${{ steps.meta.outputs.sha_short }}
+            ${{ env.REGISTRY }}/${{ steps.meta.outputs.image_name }}/web:latest
+            ${{ env.REGISTRY }}/${{ steps.meta.outputs.image_name }}/web:${{ steps.meta.outputs.timestamp }}
+            ${{ env.REGISTRY }}/${{ steps.meta.outputs.image_name }}/web:${{ steps.meta.outputs.sha_short }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -73,9 +74,9 @@ jobs:
           file: ./deploy/docker/mysql/Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/db:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/db:${{ steps.meta.outputs.timestamp }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/db:${{ steps.meta.outputs.sha_short }}
+            ${{ env.REGISTRY }}/${{ steps.meta.outputs.image_name }}/db:latest
+            ${{ env.REGISTRY }}/${{ steps.meta.outputs.image_name }}/db:${{ steps.meta.outputs.timestamp }}
+            ${{ env.REGISTRY }}/${{ steps.meta.outputs.image_name }}/db:${{ steps.meta.outputs.sha_short }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -83,7 +84,7 @@ jobs:
         run: |
           echo "## 🚀 Images Built Successfully" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Registry:** \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "**Registry:** \`${{ env.REGISTRY }}/${{ steps.meta.outputs.image_name }}\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Tags:**" >> $GITHUB_STEP_SUMMARY
           echo "- \`latest\`" >> $GITHUB_STEP_SUMMARY
