update: ワークフローは修正

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -95,6 +95,8 @@ jobs:
     name: Deploy to Production Server
     needs: build-and-push
     runs-on: self-hosted
+    # mainブランチのみデプロイを実行
+    if: github.ref == 'refs/heads/main'
     env:
       GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
       GHCR_USERNAME: ${{ secrets.GHCR_USERNAME }}
