fix: Dockerイメージビルド時の設定キャッシュ問題を修正
## 問題
- Dockerイメージビルド時に `php artisan config:cache` を実行していた
- ビルド時の環境変数（開発環境: DB_CONNECTION=sqlite）がキャッシュされる
- 本番環境の .env ファイル（DB_CONNECTION=mysql）が無視される
- 結果として「SQLite database file does not exist」エラーが発生

## エラーログ
In SQLiteConnector.php line 59: Database file at path [/var/www/html/database/database.sqlite] does not exist.

環境変数では `DB_CONNECTION=mysql` が設定されているにもかかわらず、
キャッシュされた設定により SQLite への接続を試みていた。

## 変更内容

### deploy/docker/php/Dockerfile
- ビルド時の設定キャッシュ生成を削除
- 代わりに既存キャッシュファイルを削除（実行時に再生成）
- これにより本番環境の .env が正しく読み込まれる

### deploy/scripts/deploy.sh
- ヘルスチェック後、DB接続確認前に `config:clear` を実行
- 実行時の環境変数で設定を再読み込み
- 最終リトライ時の詳細エラーログ出力を追加
- リトライ回数を10回→15回に増加（待機時間も延長）

## 効果
- 本番環境の環境変数が正しく適用される
- SQLiteではなくMySQLに接続できる
- デバッグ時のエラー情報が詳細に表示される

## 教訓
Dockerイメージビルド時に環境依存の設定をキャッシュしてはいけない。
キャッシュは実行時（デプロイ後）に生成すべき。

--- a/deploy/docker/php/Dockerfile
+++ b/deploy/docker/php/Dockerfile
@@ -39,10 +39,8 @@ COPY deploy/docker/php/php-fpm.conf /usr/local/etc/php-fpm.d/zzz-www.conf
 RUN mkdir -p /var/run/php-fpm \
   && chown -R www-data:www-data /var/run/php-fpm
 
-# Laravel用キャッシュ（存在しない場合はスキップ）
-RUN php artisan config:cache || true \
-  && php artisan route:cache || true \
-  && php artisan view:cache || true
+# 既存のキャッシュを削除（実行時に再生成）
+RUN rm -rf bootstrap/cache/*.php
 
 # 権限設定
 RUN chown -R www-data:www-data /var/www/html
