feat: ユーザーごとのデータアクセス制御を実装
概要
管理者以外の一般ユーザーが、自身が登録したGitHubリポジトリに関連する統計データ（ビュー、フォロワー、ダッシュボードの数値、リポジトリ一覧/編集/削除）のみにアクセスできるよう、データアクセス制御を導入しました。

これにより、アプリケーションがマルチユーザー環境でよりセキュアかつ適切に機能するようになります。

変更点
1. リポジトリへのユーザーIDの紐付け
GitHubRepositoryモデルにuser_idカラムを追加し、Userモデルとのリレーション（BelongsTo、HasMany）を定義しました。

GitHubRepositoryの新規作成時（RepositoryCreator Livewireコンポーネント）に、認証済みユーザーのIDを自動で保存するようにしました。

2. データアクセス制御の実装
管理者ダッシュボード (AdminController):

認証ユーザーが管理者か否かをチェックし、管理者であればすべてのデータを、一般ユーザーであれば自身のリポジトリに関連するデータのみを集計・表示するように変更しました。

リポジトリ管理 (RepositoryManager Livewireコンポーネント):

リポジトリの一覧表示を認証ユーザーのリポジトリに限定しました。

編集、削除、ステータス切り替えのアクション実行時に、対象リポジトリが認証ユーザーのものであるかチェックする権限検証ロジックを追加しました。

GitHubビュー (GitHubViewController):

index、chart、stats、projectStatsの各メソッドで、一般ユーザーからのリクエストの場合、自身が登録したリポジトリに関連するデータのみを取得するようにクエリを制限しました。

リポジトリIDを指定したフィルタリング時にも、そのリポジトリへのアクセス権限をチェックするようにしました。

GitHubフォロワー (GitHubFollowerController):

index、details、chart、statsの各メソッドで、一般ユーザーからのリクエストの場合、自身のアカウント名に関連するフォロワーデータのみを取得するようにクエリを制限しました。

ビューファイル:

フォロワー関連のビュー (github/followers.blade.php, github/follower-details.blade.php) にて、ユーザー名によるフィルタリングドロップダウンを管理者のみに表示するように変更しました。

3. その他
AdminUserSeederにおいて、管理者の認証情報をハードコードせず、.envファイルから取得するように変更し、セキュリティと環境設定の柔軟性を向上させました。

--- a/deploy/prod/env.template
+++ b/deploy/prod/env.template
@@ -53,3 +53,8 @@ PMA_ARBITRARY=1
 PMA_HOSTS=db
 PMA_USER=github_traffic_user
 PMA_PASSWORD=your_secure_password_here
+
+# 管理者アカウント設定（AdminUserSeederで使用）
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+ADMIN_NAME=システム管理者
