--- a/src/.env.example
+++ b/src/.env.example
@@ -63,3 +63,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# 管理者アカウント設定（AdminUserSeederで使用）
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+ADMIN_NAME=システム管理者
