feat: GitHubトークン管理のユーザー固有化とセキュリティ強化
## 変更内容

### Userモデルの機能拡張
- GitHub設定関連のフィールドを追加（`github_token`, `github_owner`, `github_settings_completed`, `github_token_updated_at`）
- GitHubトークンの暗号化保存機能を実装
- GitHub設定完了チェック機能を追加
- トークン管理用のヘルパーメソッドを実装
  - `hasGitHubSettings()`: 設定完了チェック
  - `setGitHubToken()`: トークンの暗号化保存
  - `getGitHubToken()`: トークンの復号化取得
  - `markGitHubSettingsCompleted()`: 設定完了フラグ
  - `resetGitHubSettings()`: 設定リセット

### コマンドのトークン取得ロジック変更
- `FetchGitHubFollowers`: ユーザー固有のトークンを使用
- `FetchGitHubViews`: リポジトリ所有者のトークンを使用
- 環境変数からの一括トークン取得を廃止

### LivewireコンポーネントのUI改善
- `RepositoryCreator`: トークン入力フィールドを削除
- `RepositoryManager`: トークン編集機能を削除
- GitHub設定完了状態の視覚的フィードバックを追加
- 設定未完了時の警告とガイダンスを実装

### AdminControllerの権限制御改善
- 一般ユーザーは自分のリポジトリのみ表示
- 管理者は全リポジトリを表示
- 統計情報の表示を適切に制限

### ビューの改善
- `dashboard.blade.php`: 動的な統計データ表示
- `admin.blade.php`: GitHub設定へのナビゲーション追加
- 管理者専用メニューの条件分岐
- `repository-creator.blade.php`: GitHub設定状態の可視化

### ルーティングの追加
- GitHub設定管理用のルート群を追加
- CRUD操作とトークンテスト機能
- 認証必須のミドルウェア設定

## セキュリティ強化
- GitHubトークンの暗号化保存
- hiddenプロパティへの追加で漏洩防止
- ユーザー権限による適切なアクセス制御
- トークンの復号化エラーハンドリング

## 技術的改善点
- トークンの集中管理から分散管理への移行
- 環境変数依存の削減
- エラーハンドリングの強化
- デバッグログの詳細化

## 影響範囲
- 各ユーザーが独自のGitHubトークンを管理可能
- セキュリティとプライバシーの大幅向上
- マルチユーザー環境での安全な運用が実現
- トークン管理の柔軟性向上

--- a/deploy/prod/env.template
+++ b/deploy/prod/env.template
@@ -43,10 +43,11 @@ SESSION_DRIVER=redis
 CACHE_STORE=redis
 QUEUE_CONNECTION=redis
 
-# GitHub API設定
-GITHUB_TOKEN=your_github_personal_access_token
-GITHUB_OWNER=your_github_username
-GITHUB_REPO=your_repo_name
+# GitHub API設定（各ユーザーが個別に設定）
+# 注意: GITHUB_TOKENとGITHUB_OWNERは各ユーザーが管理画面で個別に設定します
+# 以下の設定は後方互換性のために残していますが、使用されません
+# GITHUB_TOKEN=your_github_personal_access_token
+# GITHUB_OWNER=your_github_username
 
 # phpMyAdmin設定
 PMA_ARBITRARY=1
