fix: デプロイ環境用Dockerfileのstorage/logs権限問題を修正
Alpine Linux移行後、storage/logsディレクトリが存在しない、または
権限が不適切でログファイルに書き込めない問題を修正。

- storage/logs、storage/framework/*ディレクトリを明示的に作成
- bootstrap/cacheディレクトリを明示的に作成
- 適切な権限（775）を設定
- storage/logsにSGIDビットを設定（新規作成ファイルがwww-dataグループになるように）

これにより、マイグレーション実行時のログファイル書き込みエラーを解消。

--- a/deploy/docker/php/Dockerfile
+++ b/deploy/docker/php/Dockerfile
@@ -43,8 +43,13 @@ RUN mkdir -p /var/run/php-fpm \
 # 既存のキャッシュを削除（実行時に再生成）
 RUN rm -rf bootstrap/cache/*.php
 
-# 権限設定
-RUN chown -R www-data:www-data /var/www/html
+# storageとbootstrap/cacheディレクトリを明示的に作成し、権限を設定
+RUN mkdir -p storage/logs storage/framework/cache storage/framework/sessions storage/framework/views \
+  && mkdir -p bootstrap/cache \
+  && chown -R www-data:www-data /var/www/html \
+  && chmod -R 775 storage bootstrap/cache \
+  && chmod g+s storage/logs
+
 USER www-data
 
 CMD ["php-fpm"]
