fix: 本番環境用Dockerfileにエントリーポイントスクリプトを追加してstorage権限問題を解決
app-storageボリュームがマウントされると、Dockerfileで設定した
storageディレクトリの権限が上書きされ、ログファイルへの書き込みが
できない問題を修正。

変更内容:
- エントリーポイントスクリプト（docker-entrypoint.sh）を追加
  - コンテナ起動時にstorageディレクトリの権限を設定
  - ディレクトリが存在しない場合は作成
  - SGIDビットを設定して新規ファイルがwww-dataグループになるように
  - www-dataユーザーに切り替えてPHP-FPMを起動
- Dockerfileを修正
  - エントリーポイントスクリプトをコピーして実行可能にする
  - su-execをインストール（Alpine Linuxでユーザー切り替え用）
  - USER www-dataを削除（エントリーポイントスクリプトで切り替え）
  - ENTRYPOINTとCMDを設定

これにより、ボリュームがマウントされても適切な権限が保たれ、
Webリクエスト時の500エラーが解消される。

--- a/deploy/docker/php/Dockerfile
+++ b/deploy/docker/php/Dockerfile
@@ -36,6 +36,13 @@ RUN composer install --no-dev --optimize-autoloader --no-interaction
 # PHP-FPM設定ファイルをコピー（Unixソケット用）
 COPY deploy/docker/php/php-fpm.conf /usr/local/etc/php-fpm.d/zzz-www.conf
 
+# エントリーポイントスクリプトをコピー
+COPY deploy/docker/php/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
+# su-execをインストール（Alpine Linuxでユーザー切り替え用）
+RUN apk add --no-cache su-exec
+
 # PHP-FPMソケット用ディレクトリ作成
 RUN mkdir -p /var/run/php-fpm \
   && chown -R www-data:www-data /var/run/php-fpm
@@ -50,6 +57,6 @@ RUN mkdir -p storage/logs storage/framework/cache storage/framework/sessions sto
   && chmod -R 775 storage bootstrap/cache \
   && chmod g+s storage/logs
 
-USER www-data
-
-CMD ["php-fpm"]
+# エントリーポイントを設定（rootで実行してからwww-dataに切り替え）
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD ["-F"]
